# Memory-Visualization

./: .gitignore  GitWorkflow.md  Project_concept_demo1  Project_concept_demo2  README.md  architecture.md  d3_example.html  function_calls  index.html  local_variables  memory_leak  package-lock.json  package.json  run_and_visualize.sh  tsconfig.json  vite.config.ts
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
demo/: how-to-run.md
docs-deprecated/: architecture.md
docs-deprecated/report_resources/: data_proc_pipeline_report.md  memory_tracker_report.md
docs/report_resources/: memory_snapshots_report.md  system_architecture_report.md
examples/: function_calls  function_calls.cpp  local_variables.cpp  memory_leak.cpp
src/: App.ts  main.ts
src/JSObjectNotation/: json_serializer.h
src/components/: SyntaxReference.ts
src/core/: CMakeLists.txt  MemoryTracker.cpp  MemoryTracker.h  demo1.cpp  memory_block.h  memory_tracker.h  stack_frame.h
src/editor/: EditorPanel.ts
src/examples/: index.ts
src/fixtures/: demoTrace.ts
src/interpreter/: AutoPlayController.ts  ast.ts  autoplay.test.ts  evaluator.test.ts  evaluator.ts  lexer.test.ts  lexer.ts  memory.test.ts  memory.ts  parser.test.ts  parser.ts  stdlib.ts  types.ts  worker-protocol.test.ts  worker.ts
src/state/: ExecutionState.test.ts  ExecutionState.ts
web/: index.html
(+43 files in other folders)
